Avoid loading jQuery on mobile devices

--- a/css/receipt.css
+++ b/css/receipt.css
@@ -24,6 +24,10 @@ body {
   width: 850px;
   margin: 35px auto;
 }
+.desktop .mobile-msg,
+.desktop .mobile-background {
+  display: none;
+}
 .mobile {
   width: width;
   height: auto;
@@ -31,7 +35,7 @@ body {
   min-height: none;
   margin: 0;
 }
-.mobile .msg {
+.mobile .mobile-msg {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
@@ -50,14 +54,20 @@ body {
   font-size: 1.1em;
   color: white;
 }
-.mobile .msg-background {
-  background: rgba(0, 0, 0, 0.8);
+.mobile .mobile-background {
+  background: #2d2d2d;
   position: fixed;
   z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+.mobile .operation,
+.mobile .record,
+.mobile .modal,
+.mobile .float {
+  display: none !important;
 }
 /* Containers */
 .paper-shadow {
@@ -395,10 +405,10 @@ body {
   box-sizing: border-box;
 }
 #input input {
-  font-size: 2em;
   width: 2em;
   margin-left: 5.5em;
   padding: .5em 1em;
+  font-size: 2em;
   border-radius: 5px;
   background: #f5f5f5;
 }
